<resources>
    <string name="app_name">Cards</string>
    <string name="question_text">Tree</string>
    <string name="answer_text">Arbol</string>
    <string name="answer_button_text">Check answer</string>
    <string name="help_text">Help</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="difficult_button_title">Hard</string>
    <string name="no_cards_review">No cards to review</string>
    <string name="info_text_view_message">Number of cards remaining</string>
    <string name="due_cards_format">%d cards remaining</string>
    <string name="subtitle_text">Tap to study</string>
    <string name="title_text">Cards</string>
    <string name="no_more_cards_toast_message">No more cards</string>
    <string name="review_card_button_title">Review cards</string>
    <string name="question_card_edit_text">Question</string>
    <string name="answer_card_edit_text">Answer</string>
    <string name="question_card_edit_default">Write the question text</string>
    <string name="answer_card_edit_default">Write the answer text</string>
    <string name="accept_button_text">Accept</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="new_card_fab_description">Add card</string>
    <string name="added_card">Added card</string>
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Review Cards</string>
    <string name="statistics_nav_menu_title">Stadistics</string>
    <string name="about_nav_menu_title">About</string>
    <string name="new_deck_fab_description">New deck</string>
    <string name="name_deck_edit_text">Name</string>
    <string name="name_deck_edit_default">Name of the deck</string>
    <string name="title_deck_text">Decks</string>
    <string name="title_card_text">Cards</string>
    <string name="study_deck_fab_description">Study deck</string>
    <string name="normal_card_text">Normal</string>
    <string name="cloze_card_text">Cloze</string>
    <string name="optional_card_text">Optional</string>
    <string name="question_cloze_edit_default">Question with the replace between *</string>
    <string name="answer_optional_correct_edit_default">Correct answer</string>
    <string name="answer_optional_incorrect_edit_default">Incorrect Answer</string>
    <string name="delete_button_text">Delete</string>
    <string name="tutorial_text_nav">Tutorial</string>
    <string name="step_1_text">Step 1</string>
    <string name="step_2_text">Step 2</string>
    <string name="step_3_text">Step 3</string>
    <string name="step_1_p_text">Add a new deck by clicking on the botton right button</string>
    <string name="step_2_p_text">Click in this deck and add new cards</string>
    <string name="step_3_p_text">Then you can study the cards by clicking on the bottom left button</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="author_text">Jaime Muñoz</string>
    <string name="desc_app_text">This app was made to study throught cards</string>
    <string name="version_text">Version: 1.0.0</string>
</resources>