<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.Card" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/card_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:text="Date"/>

        <TextView
            android:id="@+id/card_edit_question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_edit_date"
            android:text="@string/question_card_edit_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationY="10sp" />

        <EditText
            android:id="@+id/card_edit_question_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_edit_question_text"
            android:textColor="@color/grey_dark"
            android:textSize="19sp"
            android:text="@string/question_card_edit_default"/>
        <TextView
            android:id="@+id/card_edit_answer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_edit_question_edit"
            android:text="@string/answer_card_edit_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationY="10sp" />

        <EditText
            android:id="@+id/card_edit_answer_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_edit_answer_text"
            android:textColor="@color/grey_dark"
            android:textSize="19sp"
            android:text="@string/answer_card_edit_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_edit_answer_edit"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/card_edit_accept_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_button_text"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:textColor="@color/purple_500"/>
            <Button
                android:id="@+id/card_edit_cancel_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:textColor="@color/purple_500"/>
        </LinearLayout>
    </RelativeLayout>

</layout>