<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/normal_card_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_card_text"
                android:backgroundTint="@android:color/holo_blue_light">
            </Button>

            <Button
                android:id="@+id/cloze_card_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cloze_card_text"
                android:backgroundTint="@android:color/holo_blue_light">
            </Button>

            <Button
                android:id="@+id/optional_card_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional_card_text"
                android:backgroundTint="@android:color/holo_blue_light">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</layout>
