<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cloze"
            type="es.uam.eps.dadm.cards.src.Cloze" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cloze_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:text="@{cloze.date.substring(0,10)}"/>

        <TextView
            android:id="@+id/cloze_edit_question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_card_edit_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationY="10sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cloze_edit_question_edit"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/question_cloze_edit_default"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_cloze_edit_text"
                android:text="@{cloze.question}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/cloze_edit_answer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_card_edit_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationY="10sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cloze_edit_answer_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/answer_card_edit_default"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer_cloze_edit_text"
                android:text="@{cloze.answer}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/cloze_edit_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel_cloze_edit_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    android:text="@string/cancel_button_text" />

                <Button
                    android:id="@+id/accept_cloze_edit_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_700"
                    android:text="@string/accept_button_text" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>
    </LinearLayout>

</layout>