<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="deck"
            type="es.uam.eps.dadm.cards.src.Deck" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deck_edit_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_deck_edit_text"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationY="10sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/deck_edit_name_edit"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_deck_edit_default"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:text="@{deck.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/card_edit_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel_deck_edit_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    android:text="@string/cancel_button_text" />

                <Button
                    android:id="@+id/accept_deck_edit_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_700"
                    android:text="@string/accept_button_text" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>
    </LinearLayout>

</layout>