<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_card_text"
                android:textAlignment="center">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title_card_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_card_fab"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_post_add_24"
            android:contentDescription="@string/new_card_fab_description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/study_deck_fab"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_work_24"
            android:contentDescription="@string/study_deck_fab_description" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>